--- a/lib/template/invalid.tmpl
+++ b/lib/template/invalid.tmpl
@@ -1,12 +1,12 @@
-class CreateInvalid<%= @classname_downcase %> < ActiveRecord::Migration
+class CreateInvalid<%= @data[:classname] %> < ActiveRecord::Migration
   def self.up
-    create_table :invalid<%= @classname_downcase_plural %> do |t|
+    create_table :invalid<%= @data[:plural] %> do |t|
       t.column :org_id, :int, :null => false
       t.column :end_datetime, :datetime, :null => true
     end
   end
 
   def self.down
-    drop_table :invalid<%= @classname_downcase_plural %>
+    drop_table :invalid<%= @data[:plural] %>
   end
 end
