--- a/lib/template/noitem.tmpl
+++ b/lib/template/noitem.tmpl
@@ -1,13 +1,13 @@
-class Create<%= @classname %> < ActiveRecord::Migration
+class Create<%= @data[:classname] %> < ActiveRecord::Migration
   def self.up
-    create_table :<%= @classname_downcase_plural %> do |t|
-<% @ary.each do |x| %>    
+    create_table :<%= @data[:plural] %> do |t|
+<% @data[:ary].each do |x| %>    
       t.column :<%= x.name %>, :<%= x.type %>, :null => <%= x.null %>
 <% end %>    
     end
   end
 
   def self.down
-    drop_table :<%= @classname_downcase_plural %>
+    drop_table :<%= @data[:plural] %>
   end
 end
