--- a/lib/template/base.tmpl
+++ b/lib/template/base.tmpl
@@ -3,7 +3,8 @@ class Create<%= @data[:classname] %> < ActiveRecord::Migration
     create_table :<%= @data[:plural] %> do |t|
 <% @data[:ary].each do |x| %>    
       t.column :<%= x.name %>, :<%= x.type %>, :null => <%= x.null %>
-<% end %>    
+<% end %>
+      t.timestamp
     end
   end
 
