--- a/lib/template/noitem.tmpl
+++ b/lib/template/noitem.tmpl
@@ -4,6 +4,7 @@ class Create<%= @data[:classname] %> < ActiveRecord::Migration
 <% @data[:ary].each do |x| %>    
       t.column :<%= x.name %>, :<%= x.type %>, :null => <%= x.null %>
 <% end %>    
+      t.timestamps
     end
   end
 
