--- a/lib/config/mysql.tmpl
+++ b/lib/config/mysql.tmpl
@@ -9,21 +9,21 @@ default_env: &default
   host:    localhost
   username: root
   password: 
-  database: <%= x.name %>
+  database: <%= @data[:dbname] %>
   pool: 5
   timeout: 5000
 
 development:
   <<: *default
-  database: <%= x.name %>_developement
+  database: <%= @data[:dbname] %>_developement
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: <%= x.name %>_test
+  database: <%= @data[:dbname] %>_test
 
 production:
   <<: *default
-  database: <%= x.name %>_production
+  database: <%= @data[:dbname] %>_production
