--- a/lib/config/sqlite3.tmpl
+++ b/lib/config/sqlite3.tmpl
@@ -8,19 +8,19 @@ default_env: &default
   adapter: sqlite3
   pool: 5
   timeout: 5000
-  database: db/sqlite3.db
+  database: <%= @data[:db_dir] %>/sqlite3.db
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: <%= @data[:db_dir] %>/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: <%= @data[:db_dir] %>/test.sqlite3
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: <%= @data[:db_dir] %>/production.sqlite3
