--- a/lib/template/base.tmpl
+++ b/lib/template/base.tmpl
@@ -4,7 +4,7 @@ class Create<%= @data[:classname] %> < ActiveRecord::Migration
 <% @data[:ary].each do |x| %>    
       t.column :<%= x.name %>, :<%= x.type %>, :null => <%= x.null %>
 <% end %>
-      t.timestamps
+      t.timestamps  null: false
     end
   end
 
