remove username value from lib/config/mysql.tmpl

--- a/lib/config/mysql.tmpl
+++ b/lib/config/mysql.tmpl
@@ -7,7 +7,7 @@
 default_env: &default
   adapter: mysql2
   host:    localhost
-  username: root
+  username: 
   password: 
   database: <%= @data[:dbname] %>
   pool: 5
