--- a/lib/config/mysql.tmpl
+++ b/lib/config/mysql.tmpl
@@ -1,5 +1,5 @@
-# SQLite version 3.x
-#   gem install sqlite3
+# MySQL
+#   gem install mysql2
 #
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
